@@ -19,6 +19,7 @@ require_relative "controller"
 require_relative "request"
 require_relative "cookie"
 require_relative "session"
+require_relative "flash"
 require_relative "config"
 require_relative "route"
 require_relative "route_entry"
