@@ -129,6 +129,10 @@ module Nyara
       @session ||= Session.decode cookie
     end
 
+    def flash
+      @flash ||= Flash.new @session
+    end
+
     # todo rename and move it into Ext
     def not_found # :nodoc:
       Ext.request_send_data self, "HTTP/1.1 404 Not Found\r\nConnection: close\r\nContent-Length: 0\r\n\r\n"
